[metadata]
name = arsenal
summary = Ironic image caching service
description-file =
    README.rst
author = Rackspace
author-email = teeth-dev@lists.rackspace.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
version = 0.1.0

[files]
packages =
    arsenal

[entry_points]
console_scripts =
    arsenal-director = arsenal.cmd.director:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = arsenal/locale
domain = arsenal

[update_catalog]
domain = arsenal
output_dir = arsenal/locale
input_file = arsenal/locale/arsenal.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = arsenal/locale/arsenal.pot
